cupt (0.1.2) UNRELEASED; urgency=low

  * cupt:
    - 'markauto'/'unmarkauto' subcommands:
      - Don't require worker at compilation stage. Speeds up compilation a bit.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 13:12:00 +0300

cupt (0.1.1.1) experimental; urgency=low

  * debian/control:
    - Put libwww-curl-perl to Build-Depends-Indep so t/file_method.t can load
      it.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 01:49:41 +0300

cupt (0.1.1) experimental; urgency=low

  * doc/cupt.1.pod:
    - Added 'Author' section.
  * cupt:
    - Action preview prompt:
      - Generate additional warning when deleting essential packages.
      - Require typing the confirmation phrase for really dangerous actions.
      - Changed 'installed' -> 'INSTALLED' for untrusted packages warning.
    - 'satisfy' subcommand:
      - Now accepts sequences of relation expressions divided by commas within
        one argument.
    - 'config-dump' subcommand:
      - Added a mode to print a value of only one configuration option.
    - 'show' subcommand:
      - Changed 'PreDepends' -> 'Pre-Depends' in output.
    - Implemented option '--installed-only' for some query actions.
    - Implemented option '--download-only' for management actions.
  * Cupt:
    - Core:
      - 'human_readable_size_string': don't print fractional part for small
        float values.
    - Download:
      - Method, Methods/*:
        - [API break] 'sub_callback' in 'perform', added fetched bytes
          parameter for 'downloading' callback
        - Various documentation improvements.
      - Manager:
        - Road all progress requests through own pipe, not directly.
        - Update progress meter several times during a second.
        - Made more strings translatable.
      - Progress:
        - New method 'get_start_time'.
        - New method 'get_long_alias_for_uri'.
        - New method 'get_short_alias_for_uri'.